force-app/main/default/objects/User/fields/Agence_web_to_lead__c.field-meta.xml
<CustomField>
    <fullName>Agence_web_to_lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agence web-to-lead</label>
    <type>Checkbox</type>
</CustomField>