force-app/main/default/objects/User/fields/Bypass_VR__c.field-meta.xml
<CustomField>
    <fullName>Bypass_VR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass VR</label>
    <type>Checkbox</type>
</CustomField>