force-app/main/default/objects/User/fields/Centre_d_appel_web_to_lead__c.field-meta.xml
<CustomField>
    <fullName>Centre_d_appel_web_to_lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Centre d&apos;appel web-to-lead</label>
    <type>Checkbox</type>
</CustomField>