force-app/main/default/objects/User/fields/Commercial_web_to_lead_VN__c.field-meta.xml
<CustomField>
    <fullName>Commercial_web_to_lead_VN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commercial web-to-lead VN</label>
    <type>Checkbox</type>
</CustomField>