force-app/main/default/objects/User/fields/Date_de_derni_re_affectation_web__c.field-meta.xml
<CustomField>
    <fullName>Date_de_derni_re_affectation_web__c</fullName>
    <label>Date de dernière affectation web</label>
    <type>DateTime</type>
</CustomField>