force-app/main/default/objects/User/fields/Marque__c.field-meta.xml
<CustomField>
    <fullName>Marque__c</fullName>
    <defaultValue>&apos;BMW&apos;</defaultValue>
    <label>Marque</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Marques</valueSetName>
    </valueSet>
</CustomField>