force-app/main/default/objects/User/fields/Matricule_SGate__c.field-meta.xml
<CustomField>
    <fullName>Matricule_SGate__c</fullName>
    <externalId>true</externalId>
    <label>Matricule SGate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>