force-app/main/default/objects/User/fields/Niveau_d_approbation__c.field-meta.xml
<CustomField>
    <fullName>Niveau_d_approbation__c</fullName>
    <description>valeur accepte 0,1,2,3,4,5,6</description>
    <inlineHelpText>valeur accepte 0,1,2,3,4,5,6</inlineHelpText>
    <label>Niveau d&apos;approbation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>