force-app/main/default/objects/User/fields/role_name__c.field-meta.xml
<CustomField>
    <fullName>role_name__c</fullName>
    <formula>UserRole.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>role name</label>
    <type>Text</type>
</CustomField>