force-app/main/default/objects/User/fields/Showroom__c.field-meta.xml
<CustomField>
    <fullName>Showroom__c</fullName>
    <defaultValue>&apos;Smeia - Casablanca&apos;</defaultValue>
    <label>Showroom</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Showrooms</valueSetName>
    </valueSet>
</CustomField>