force-app/main/default/objects/User/fields/TECH_Marque_Text__c.field-meta.xml
<CustomField>
    <fullName>TECH_Marque_Text__c</fullName>
    <label>TECH Marque Text</label>
    <type>TextArea</type>
</CustomField>